# j-Ecdar

./: .gitignore  .gitmodules  LICENSE  README.md  adm2new.xml  admnew.xml  build.gradle  comp.xml  leftUniv.xml  rightUniv.xml  settings.gradle  specDIVadm.xml
.github/workflows/: ci.yml  main.yml  native-compile.yml
DBMLib/: CMakeLists.txt  build.gradle  toolchain-x86_64-w64-mingw32.cmake
DBMLib/lib/: DBMLib.java  lib_DBMLib.cpp
JCDD/: CMakeLists.txt  getlibs-win.sh  getlibs.sh  toolchain-x86_64-w64-mingw32.cmake
JCDD/src/: CDDLib.java  DBMLib.java  helper_functions.cpp  helper_functions.h  lib_CDDLib.cpp  lib_CDDLib.h  lib_DBMLib.cpp
JDBM/: CMakeLists.txt  toolchain-x86_64-w64-mingw32.cmake
JDBM/src/: DBMLib.java  lib_DBMLib.cpp
dbm/: Base64Coder.cpp  Connection.cpp  DBMAllocator.cpp  DBMAllocator.h  DataAllocator.cpp  DataAllocator.h  Enumerator.cpp  Federation.cpp  H3HashFunction.cpp  IOQueue.h  License.cpp  License.h  PointerTable.cpp  PriorityQueue.cpp  SimpleQueue.cpp  Timer.cpp  bitstring.c  c_allocator_base.c  c_allocator_debug.c  c_allocator_debug.h  compute.c  config.h  dbm.c  dbm_private.h  dbmfederation.c  doubles.c  exceptions.cpp  fed.cpp  fed_dbm.cpp  gen.c  infimum.cpp  infimum.h  inline_fed.h  intutils.c  malloc.h  mingraph.c  mingraph.h  mingraph_cache.cpp  mingraph_cache.h  mingraph_equal.c  (+13 more)
dbm/compilers/: .lastflags
dbm/jni/: DBMLib.java
dbm/modules/: .config  README  autogen.sh  config.status  configure  configure.ac  makefile  setup.sh
dbm/scripts/: Makefile.module.in  configure.ac.in  getmodules.sh
lib/: DBMLib.jar:Zone.Identifier
samples/AG/: Queries.json  SystemDeclarations.json
samples/Conjunction/: Queries.json  SystemDeclarations.json
samples/EcdarUniversity/: Queries.json  SystemDeclarations.json
samples/xml/: BoolQuotient.xml  BoolQuotientOneTemplate.xml  ConsTests.q  ConsTests.xml  DisjunctionTests.xml  ImplTests.q  ImplTests.xml  bisimilarity.xml  booleanRefinement.xml  booleanRefinementOneAut.xml  conjun.xml  delayRefinement.q  delayRefinement.xml  is_consistent_single.xml  misc_test.xml  refinement_bool.xml  selfloopNonZeno.xml  simliversity.xml  simple.xml  simpliversity.xml  staticSpecDIVAdm.xml  test.xml  test1.txt  test1.xml  timedInconsistency.xml  timedReach.xml  university-is-getting-simpler.xml  university-slice.xml  university-universalSpec.xml  university.xml
src/: DBMLib.cpp  DBMLib.h  DBMLib.java  JECDAR.java  LICENSE.TXT  lib_DBMLib.cpp  lib_DBMLib.h
src/Connection/: Main.java
src/Exceptions/: CddAlreadyRunningException.java  CddNotRunningException.java  InvalidQueryException.java
src/antlr/: CommonLexerRules.g4  EdgeGrammar.g4  ExpressionGrammar.g4  GuardGrammar.g4  QueryGrammar.g4  UpdateGrammar.g4
src/connection/: EcdarService.java  GrpcServer.java  Main.java
src/exceptions/: BooleanVariableNotFoundException.java  CddAlreadyRunningException.java  CddNotRunningException.java  ClockNotFoundException.java  InvalidQueryException.java
src/global/: LibLoader.java
src/lib/: Constraint.java  DBMLib.java  lib_DBMLib.h
src/log/: Ansi.java  Log.java  Urgency.java
src/logic/: AggregatedTransitionSystem.java  Bisimilarity.java  ClockContainer.java  ComplexLocation.java  ComposedTransitionSystem.java  Composition.java  Conjunction.java  Controller.java  Federation.java  GraphEdge.java  GraphNode.java  Helpers.java  InconsistentLocation.java  JsonAutomatonEncoder.java  JsonFileWriter.java  Move.java  Node.java  Pruning.java  Query.java  Quotient.java  Refinement.java  SimpleLocation.java  SimpleTransitionSystem.java  Specification.java  State.java  StatePair.java  StateTransition.java  SymbolicLocation.java  Transition.java  TransitionSystem.java  UniqueNamedContainer.java  UniversalLocation.java  Zone.java
src/main/: Main.java
src/models/: AdapterPipe.java  AndExpression.java  AndGuard.java  Automaton.java  BDDArrays.java  BoolExpression.java  BoolGuard.java  BoolUpdate.java  BoolVal.java  BoolVar.java  BooleanExpression.java  CDD.java  CDDFactory.java  CDDNode.java  CDDRuntime.java  CddExtractionResult.java  Channel.java  Clock.java  ClockExpression.java  ClockGuard.java  ClockUpdate.java  ComplexLocation.java  Component.java  DiagonalConstraintRemover.java  Edge.java  Elem.java  ElemIterable.java  ElemIterator.java  Expression.java  FalseExpression.java  FalseGuard.java  Federation.java  Guard.java  GuardCddEvaluationVisitor.java  GuardEvalation.java  GuardEvaluationVisitor.java  GuardFactory.java  GuardShortCircuitVisitor.java  GuardVisitor.java  InconsistentLocation.java  (+26 more)
src/parser/: ErrorListener.java  ExpressionParser.java  GuardParser.java  JSONParser.java  JsonFileWriter.java  Parser.java  QueryParser.java  UpdateParser.java  XMLFileWriter.java  XMLParser.java
src/proto/: services.proto
src/util/: DeferredProperty.java
test/cdd/: CDDTest.java
test/connection/: ConnectionTest.java  EcdarServiceTest.java  InProcessServer.java
test/dbm/: DBMTest.java
test/e2e/: ConsistencyTest.java  GrpcE2EBase.java  UniversityTest.java
test/features/: AGTest.java  BigRefinementTest.java  BisimilarityTest.java  BoolTest.java  BoolVarNamingTest.java  ClockNamingTest.java  CompositionTest.java  ConjunctionTest.java  ConjunctionXMLTest.java  ConsistencyTest.java  DelayAddTest.java  DelayRefinementTest.java  DeterminismTest.java  Helpers.java  ImplementationTest.java  PruningTest.java  QuotientTest.java  SpecifcationTest.java  SpecificationTest.java  UniversitySimpleTest.java  UniversityTest.java  UnspecTest.java
test/logic/: AGTest.java  BigRefinementTest.java  LocationTest.java  QuotientTest.java  RefinementTest.java  UniversityTest.java  UnspecTest.java
test/models/: AutomatonTest.java  BooleanExpressionTest.java  CDDTest.java  ClockOwnerTest.java  DiagonalConstraintRemoverTest.java  DisjunctionTest.java  ExpressionTest.java  (+3 more)
(+102 files in other folders)
